Page is ready to synchronize with sever

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <span>
-        Basic client for Spring Boot server with Data Base.
+        This is basic client for my Spring Boot server made for tests. You can create account and return in some days to check progress with project.
     </span>
 </body>
 </html>
