--- a/signin.html
+++ b/signin.html
@@ -16,7 +16,7 @@
                 <div id="div4">
                     <div id="div5">
                         <span id="span-header-signin">
-                            Sign in
+                            Sign In
                         </span>
                     </div>
                     <div id="div6">
