--- a/signup.html
+++ b/signup.html
@@ -8,16 +8,43 @@
     <link rel="stylesheet" href="styles/form-style.css">
 </head>
 <body>
-    <form action="" id="form">
-        <span class="span-desc">Username:</span>
-        <input type="text" class="text-input" name="input-username"><br>
 
-        <span class="span-desc">Password:</span>
-        <input type="password" class="text-input" name="input-password"><br>
 
-        <span class="span-desc">Re-password:</span>
-        <input type="password" class="text-input" name="input-re-password">
-    </form>
-    </form>
+    <div id="div1">
+        <div id="div2">
+            <div id="div3">
+                <div id="div4">
+                    <div id="div5">
+                        <span id="span-header-signin">
+                            Sign Up
+                        </span>
+                    </div>
+                    <div id="div6">
+                        <div id="div7">
+                            <form action="" method="post" id="form">
+                                <span class="span-desc">Username:</span><br>
+                                <input type="text" class="textfield"><br>
+                                <span class="span-desc">Password:</span><br>
+                                <input type="text" class="textfield"><br>
+                                <span class="span-desc">Re-Password</span><br>
+                                <input type="text" class="textfield"><br>
+                                <input type="button" id="button" value="Sign In"><br>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+<!--
+<form id="form">
+    <span class="span-desc">Username:</span>
+    <input type="text" class="text-input" name="input-username"><br>
+
+    <span class="span-desc">Password:</span>
+    <input type="password" class="text-input" name="input-password">
+
+</form>-->
